# MyPlayer

./: CMakeLists.txt  README.md
3rdpart/ffmpeg/include/libavutil/: ffversion.h
3rdpart/ffmpeg/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil-57.def  avutil.lib  postproc.lib  swresample.lib  swscale.lib
3rdpart/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
MMAV/: CMakeLists.txt  MMAV.h  MMAVDecoder.cpp  MMAVDecoderPrivate.h  MMAVFrame.cpp  MMAVFramePrivate.h  MMAVPacket.cpp  MMAVPacketPrivate.h  MMAVReader.cpp  MMAVReaderPrivate.h  MMAVStream.cpp  MMAVStreamPrivate.h  MMAVTime.cpp
MMPlayerTest/: CMakeLists.txt  Main.cpp
MMQueue/: MMQueue.h
MMThread/: CMakeLists.txt  MMThread.cpp  MMThread.h
MMplayer/: CMakeLists.txt  MMPlayerCtr.cpp  MMPlayerDecoderThread.cpp  MMPlayerReaderThread.cpp  MMplayer.cpp  MMplayer.h
